--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body class="bg-dark">
+    <div class="container">
+      <h1>Design system</h1>
+
+      <div class="bg-accent text-dark" style="padding: 1rem">
+        light blue bg, dark text
+      </div>
+      <div class="bg-white text-dark" style="padding: 1rem">
+        wht blue bg, dark text
+      </div>
+      <div class="example text-white" style="padding: 1rem">
+        light blue bg, wht text alpha 20%
+      </div>
+    </div>
+  </body>
 </html>
