--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Barlow:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body class="bg-dark">
+  <body class="bg-dark text-white">
     <div class="container">
       <h1>Design system</h1>
-
-      <div class="bg-accent text-dark" style="padding: 1rem">
-        light blue bg, dark text
-      </div>
-      <div class="bg-white text-dark" style="padding: 1rem">
-        wht blue bg, dark text
-      </div>
-      <div class="example text-white" style="padding: 1rem">
-        light blue bg, wht text alpha 20%
-      </div>
     </div>
   </body>
 </html>
