--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body class="bg-dark text-white">
     <div class="container">
-      <h1>Design system</h1>
+      <h2 class="numbered-title"><span>01</span>Testing</h2>
+      <p class="text-accent fs-900 ff-serif uppercase">Earth</p>
     </div>
   </body>
 </html>
