--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="bg-dark text-white">
     <div class="container">
       <h2 class="numbered-title"><span>01</span>Testing</h2>
-      <p class="text-accent fs-900 ff-serif uppercase">Earth</p>
+      <p class="">Earth</p>
     </div>
   </body>
 </html>
